JumpScript/tests/baselines/reference/parserThrowStatement1.d.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserThrowStatement1.d.jump(1,1): error TS1036: Statements are not allowed in ambient contexts.
tests/cases/conformance/parser/ecmascript5/Statements/parserThrowStatement1.d.jump(1,7): error TS2304: Cannot find name 'e'.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserThrowStatement1.d.jump (2 errors) ====
    throw e;
    ~~~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
          ~
!!! error TS2304: Cannot find name 'e'.